# sinen

./: CMakeLists.txt
examples/hello_world/: CMakeLists.txt
examples/hello_world/data/: shader
examples/hello_world/native/: main.cpp
examples/hello_world/script/: main.lua
